# tictac-AI

./: README.md  tictac-AI.cabal
src/: Definitions.hs  Main.hs  PlayGame.hs  RenderGame.hs
