name:                tictac-AI
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/okumamiwa/tictac-AI#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2021 Author name here
category:            Game
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable tictac-AI
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       RenderGame,
                       PlayGame,
                       Definitions
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       gloss, 
                       random,
                       lens,
                       array
